# MLProjectHousePricePrediction

./: .gitignore  README.md  main.ipynb  pyproject.toml  requirements.txt
notebooks/: analyze.ipynb  datavisualization.ipynb  train.ipynb
